Address comments, fix classyvision commit

--- a/tutorials/Benchmark_Full_Finetuning_on_ImageNet_1K_V0_1_6.ipynb
+++ b/tutorials/Benchmark_Full_Finetuning_on_ImageNet_1K_V0_1_6.ipynb
@@ -1,43 +1,31 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
-  "metadata": {
-    "colab": {
-      "name": "Benchmark Full-Finetuning on ImageNet-1K V0.1.6.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Benchmark_Full_Finetuning_on_ImageNet_1K_V0_1_6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "# Copyright (c) Facebook, Inc. and its affiliates. All rights reserved."
-      ],
-      "outputs": [],
       "metadata": {
         "id": "z9Fa0V1T7AW9"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# Copyright (c) Facebook, Inc. and its affiliates. All rights reserved."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6XzxTZfKwFNo"
+      },
       "source": [
         "# Benchmark Full-Finetuning on ImageNet-1K\n",
         "\n",
@@ -46,25 +34,26 @@
         "You can make a copy of this tutorial by `File -> Open in playground mode` and make changes there. Please do *NOT* request access to this tutorial.\n",
         "\n",
         "**NOTE:** Please ensure your Collab Notebook has a GPU available. To ensure this, simply follow: `Edit -> Notebook Settings -> select GPU.`"
-      ],
-      "metadata": {
-        "id": "6XzxTZfKwFNo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VohdWhBSw69e"
+      },
       "source": [
         "## Install VISSL\n",
         "\n",
         "Installing VISSL is pretty straightfoward. We will use pip binaries of VISSL and follow instructions from [here](https://github.com/facebookresearch/vissl/blob/master/INSTALL.md#install-vissl-pip-package)."
-      ],
-      "metadata": {
-        "id": "VohdWhBSw69e"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "R5ISg59KTOqU"
+      },
+      "outputs": [],
       "source": [
         "# Install pytorch version 1.8\n",
         "!pip install torch==1.8.0+cu101 torchvision==0.9.0+cu101 -f https://download.pytorch.org/whl/torch_stable.html\n",
@@ -94,79 +83,77 @@
         "!pip install --progress-bar off -r requirements.txt\n",
         "!pip install opencv-python\n",
         "\n",
-        "# update classy vision install to current master\n",
+        "# update classy vision install to commit compatible with v0.1.6\n",
         "!pip uninstall -y classy_vision\n",
-        "\n",
-        "# TODO: fix classy commit here.\n",
-        "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/main\n",
+        "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/4785d5ee19d3bcedd5b28c1eb51ea1f59188b54d\n",
         "\n",
         "# install vissl dev mode (e stands for editable)\n",
         "!pip install -e .[dev]"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "R5ISg59KTOqU"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "VISSL should be successfuly installed by now and all the dependencies should be available."
-      ],
       "metadata": {
         "id": "u6Fxe3MWxqsI"
-      }
+      },
+      "source": [
+        "VISSL should be successfuly installed by now and all the dependencies should be available."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "Np6atgoOTPrA"
+      },
+      "outputs": [],
       "source": [
         "import vissl\n",
         "import tensorboard\n",
         "import apex\n",
         "import torch"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "Np6atgoOTPrA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IxMXLYLpsJXj"
+      },
       "source": [
         "## Download the ResNet-50 weights from Torchvision\n",
         "\n",
         "We download the weights from the [torchvision ResNet50 model](https://github.com/pytorch/vision/blob/master/torchvision/models/resnet.py#L16):"
-      ],
-      "metadata": {
-        "id": "IxMXLYLpsJXj"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "!wget https://download.pytorch.org/models/resnet50-19c8e357.pth -P /content/"
-      ],
-      "outputs": [],
       "metadata": {
         "id": "mv0quZwFsWxs"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "!wget https://download.pytorch.org/models/resnet50-19c8e357.pth -P /content/"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "J0hng2EPY7pr"
+      },
       "source": [
         "## Creating a custom data\n",
         "\n",
         "For the purpose of this tutorial, since we don't have ImageNet on the disk, we will create a dummy dataset by copying an image from COCO dataset in ImageNet dataset folder style as below:"
-      ],
-      "metadata": {
-        "id": "J0hng2EPY7pr"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "5-sy6nD-RfwB"
+      },
+      "outputs": [],
       "source": [
         "!mkdir -p /content/dummy_data/train/class1\n",
         "!mkdir -p /content/dummy_data/train/class2\n",
@@ -198,28 +185,28 @@
         "!wget http://images.cocodataset.org/val2017/000000439715.jpg -q -O /content/dummy_data/val/class2/img3.jpg\n",
         "!wget http://images.cocodataset.org/val2017/000000439715.jpg -q -O /content/dummy_data/val/class2/img4.jpg\n",
         "!wget http://images.cocodataset.org/val2017/000000439715.jpg -q -O /content/dummy_data/val/class2/img5.jpg\n"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "5-sy6nD-RfwB"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KPGCiTsXZeW3"
+      },
       "source": [
         "## Using the custom data in VISSL\n",
         "\n",
         "Next step for us is to register the dummy data we created above with VISSL. Registering the dataset involves telling VISSL about the dataset name and the paths for the dataset. For this, we create a simple json file with the metadata and save it to `configs/config/dataset_catalog.py` file.\n",
         "\n",
         "**NOTE**: VISSL uses the specific `dataset_catalog.json` under the path `configs/config/dataset_catalog.json`."
-      ],
-      "metadata": {
-        "id": "KPGCiTsXZeW3"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "M8Q6LCqaWjl1"
+      },
+      "outputs": [],
       "source": [
         "json_data = {\n",
         "    \"dummy_data_folder\": {\n",
@@ -235,37 +222,31 @@
         "# use VISSL's api to save or you can use your custom code.\n",
         "from vissl.utils.io import save_file\n",
         "save_file(json_data, \"/content/vissl/configs/config/dataset_catalog.json\", append_to_json=False)"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "M8Q6LCqaWjl1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Next, we verify that the dataset is registered with VISSL. For that we query VISSL's dataset catalog as below:"
-      ],
       "metadata": {
         "id": "otN1pB32cBHK"
-      }
+      },
+      "source": [
+        "Next, we verify that the dataset is registered with VISSL. For that we query VISSL's dataset catalog as below:"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "from vissl.data.dataset_catalog import VisslDatasetCatalog\n",
-        "\n",
-        "# list all the datasets that exist in catalog\n",
-        "print(VisslDatasetCatalog.list())\n",
-        "\n",
-        "# get the metadata of dummy_data_folder dataset\n",
-        "print(VisslDatasetCatalog.get(\"dummy_data_folder\"))"
-      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wZBhH-s5bcHd",
+        "outputId": "a7ff5917-803f-441e-c388-1b07af2a0a2f"
+      },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "WARNING:fvcore.common.file_io:** fvcore version of PathManager will be deprecated soon. **\n",
             "** Please migrate to the version in iopath repo. **\n",
@@ -274,24 +255,29 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['dummy_data_folder']\n",
             "{'train': ['/content/dummy_data/train', '/content/dummy_data/train'], 'val': ['/content/dummy_data/val', '/content/dummy_data/val']}\n"
           ]
         }
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wZBhH-s5bcHd",
-        "outputId": "a7ff5917-803f-441e-c388-1b07af2a0a2f"
-      }
+      "source": [
+        "from vissl.data.dataset_catalog import VisslDatasetCatalog\n",
+        "\n",
+        "# list all the datasets that exist in catalog\n",
+        "print(VisslDatasetCatalog.list())\n",
+        "\n",
+        "# get the metadata of dummy_data_folder dataset\n",
+        "print(VisslDatasetCatalog.get(\"dummy_data_folder\"))"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YaUMDwMdzYHN"
+      },
       "source": [
         "## Run Full-Finetuning\n",
         "\n",
@@ -313,49 +299,31 @@
         "config.DATA.TRAIN.DATA_PATHS=[\"/path/to/my/imagenet/folder/train\"] \\\n",
         "config.DATA.TRAIN.LABEL_SOURCES=[disk_folder]\n",
         "```"
-      ],
-      "metadata": {
-        "id": "YaUMDwMdzYHN"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The training command looks like:"
-      ],
       "metadata": {
         "id": "fM7IigSpONW0"
-      }
+      },
+      "source": [
+        "The training command looks like:"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "!python3 tools/run_distributed_engines.py \\\n",
-        "    hydra.verbose=true \\\n",
-        "    config=benchmark/fulltune/imagenet1k/eval_resnet_8gpu_transfer_in1k_fulltune.yaml \\\n",
-        "    config.DATA.TRAIN.DATA_SOURCES=[disk_folder] \\\n",
-        "    config.DATA.TRAIN.LABEL_SOURCES=[disk_folder] \\\n",
-        "    config.DATA.TRAIN.DATASET_NAMES=[dummy_data_folder] \\\n",
-        "    config.DATA.TRAIN.BATCHSIZE_PER_REPLICA=2 \\\n",
-        "    config.DATA.TEST.DATA_SOURCES=[disk_folder] \\\n",
-        "    config.DATA.TEST.LABEL_SOURCES=[disk_folder] \\\n",
-        "    config.DATA.TEST.DATASET_NAMES=[dummy_data_folder] \\\n",
-        "    config.DATA.TEST.BATCHSIZE_PER_REPLICA=2 \\\n",
-        "    config.OPTIMIZER.num_epochs=2 \\\n",
-        "    config.OPTIMIZER.param_schedulers.lr.values=[0.01,0.001] \\\n",
-        "    config.OPTIMIZER.param_schedulers.lr.milestones=[1] \\\n",
-        "    config.DISTRIBUTED.NUM_NODES=1 \\\n",
-        "    config.DISTRIBUTED.NUM_PROC_PER_NODE=1 \\\n",
-        "    config.CHECKPOINT.DIR=\"/content/checkpoints\" \\\n",
-        "    config.MODEL.WEIGHTS_INIT.PARAMS_FILE=\"/content/resnet50-19c8e357.pth\" \\\n",
-        "    config.MODEL.WEIGHTS_INIT.APPEND_PREFIX=\"trunk._feature_blocks.\" \\\n",
-        "    config.MODEL.WEIGHTS_INIT.STATE_DICT_KEY_NAME=\"\"\n"
-      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6v0HvauIj9S2",
+        "outputId": "2f9d3a67-14d9-44a0-c27c-aca49d31ef9d"
+      },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "** fvcore version of PathManager will be deprecated soon. **\n",
             "** Please migrate to the version in iopath repo. **\n",
@@ -1800,33 +1768,52 @@
           ]
         }
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6v0HvauIj9S2",
-        "outputId": "2f9d3a67-14d9-44a0-c27c-aca49d31ef9d"
-      }
+      "source": [
+        "!python3 tools/run_distributed_engines.py \\\n",
+        "    hydra.verbose=true \\\n",
+        "    config=benchmark/fulltune/imagenet1k/eval_resnet_8gpu_transfer_in1k_fulltune.yaml \\\n",
+        "    config.DATA.TRAIN.DATA_SOURCES=[disk_folder] \\\n",
+        "    config.DATA.TRAIN.LABEL_SOURCES=[disk_folder] \\\n",
+        "    config.DATA.TRAIN.DATASET_NAMES=[dummy_data_folder] \\\n",
+        "    config.DATA.TRAIN.BATCHSIZE_PER_REPLICA=2 \\\n",
+        "    config.DATA.TEST.DATA_SOURCES=[disk_folder] \\\n",
+        "    config.DATA.TEST.LABEL_SOURCES=[disk_folder] \\\n",
+        "    config.DATA.TEST.DATASET_NAMES=[dummy_data_folder] \\\n",
+        "    config.DATA.TEST.BATCHSIZE_PER_REPLICA=2 \\\n",
+        "    config.OPTIMIZER.num_epochs=2 \\\n",
+        "    config.OPTIMIZER.param_schedulers.lr.values=[0.01,0.001] \\\n",
+        "    config.OPTIMIZER.param_schedulers.lr.milestones=[1] \\\n",
+        "    config.DISTRIBUTED.NUM_NODES=1 \\\n",
+        "    config.DISTRIBUTED.NUM_PROC_PER_NODE=1 \\\n",
+        "    config.CHECKPOINT.DIR=\"/content/checkpoints\" \\\n",
+        "    config.MODEL.WEIGHTS_INIT.PARAMS_FILE=\"/content/resnet50-19c8e357.pth\" \\\n",
+        "    config.MODEL.WEIGHTS_INIT.APPEND_PREFIX=\"trunk._feature_blocks.\" \\\n",
+        "    config.MODEL.WEIGHTS_INIT.STATE_DICT_KEY_NAME=\"\"\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "And we are done!! We have the full-finetuned model and the `metrics.json` containing `top-1` and `top-5` accuracy on validation set is available in `checkpoints/metrics.json`."
-      ],
       "metadata": {
         "id": "A8fILq7VzyOu"
-      }
+      },
+      "source": [
+        "And we are done!! We have the full-finetuned model and the `metrics.json` containing `top-1` and `top-5` accuracy on validation set is available in `checkpoints/metrics.json`."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "ls /content/checkpoints/"
-      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "otUmgl4ms96M",
+        "outputId": "75ef95e3-f0b7-4f49-b72b-167e35f66680"
+      },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[0m\u001b[01;36mcheckpoint.torch\u001b[0m@  model_final_checkpoint_phase1.torch  train_config.yaml\n",
             "log.txt            model_phase0.torch\n",
@@ -1834,24 +1821,24 @@
           ]
         }
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "otUmgl4ms96M",
-        "outputId": "75ef95e3-f0b7-4f49-b72b-167e35f66680"
-      }
+      "source": [
+        "ls /content/checkpoints/"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "cat /content/checkpoints/metrics.json"
-      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vDMLjudpya2I",
+        "outputId": "a3ebafa6-f0da-41cf-80fd-553baf237bfa"
+      },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{\"iteration\": 5, \"phase_idx\": 0, \"train_accuracy_list_meter\": {\"top_1\": {\"0\": 20.0}, \"top_5\": {\"0\": 40.0}}, \"train_phase_idx\": 0}\n",
             "{\"iteration\": 5, \"phase_idx\": 1, \"test_accuracy_list_meter\": {\"top_1\": {\"0\": 50.0}, \"top_5\": {\"0\": 100.0}}, \"train_phase_idx\": 0}\n",
@@ -1860,16 +1847,15 @@
           ]
         }
       ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vDMLjudpya2I",
-        "outputId": "a3ebafa6-f0da-41cf-80fd-553baf237bfa"
-      }
+      "source": [
+        "cat /content/checkpoints/metrics.json"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9xFUcTj00B_a"
+      },
       "source": [
         "# Loading Pre-trained models in VISSL\n",
         "\n",
@@ -1911,10 +1897,22 @@
         "  ```\n",
         "\n",
         "  **NOTE:** The above configuration will only load the TRUNK of a torchvision model. If you wish to load the HEAD and TRUNK of a torchvision model, you will have to convert the torchvision model to a VISSL supported checkpoint."
-      ],
-      "metadata": {
-        "id": "9xFUcTj00B_a"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Benchmark Full-Finetuning on ImageNet-1K V0.1.6.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
