--- a/tutorials/Large_Scale_Training_V0_1_6.ipynb
+++ b/tutorials/Large_Scale_Training_V0_1_6.ipynb
@@ -1,44 +1,33 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
-  "metadata": {
-    "colab": {
-      "name": "Large Scale Training V0.1.6.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Large_Scale_Training_V0_1_6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6XzxTZfKwFNo"
+      },
       "source": [
         "# Large Scale Training with VISSL Training (mixed precision, LARC, ZeRO etc)\n",
         "\n",
         "In this tutorial, show configuration settings that users can set for training large models.\n",
         "\n",
         "You can make a copy of this tutorial by `File -> Open in playground mode` and make changes there. DO NOT request access to this tutorial."
-      ],
-      "metadata": {
-        "id": "6XzxTZfKwFNo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AFEHZ4KdxzWq"
+      },
       "source": [
         "# Using LARC\n",
         "\n",
@@ -49,13 +38,13 @@
         "for modifying the learning rate of the parameters.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "AFEHZ4KdxzWq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xKfAQdqzBPC9"
+      },
       "source": [
         "## How to enable LARC\n",
         "\n",
@@ -76,13 +65,13 @@
         "**NOTE:** LARC is currently supported for SGD optimizer only in VISSL.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "xKfAQdqzBPC9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4xtRB6l6BQ9x"
+      },
       "source": [
         "# Using Apex\n",
         "\n",
@@ -91,13 +80,13 @@
         "packages are provided for all versions of `CUDA (9.2, 10.0, 10.1, 10.2, 11.0), PyTorch >= 1.4 and Python >=3.6 and <=3.9`.\n",
         "\n",
         "Follow VISSL's instructions to [install apex in pip](https://github.com/facebookresearch/vissl/blob/master/INSTALL.md#step-2-install-pytorch-opencv-and-apex-pip) and instructions to [install apex in conda](https://github.com/facebookresearch/vissl/blob/master/INSTALL.md#step-3-install-apex-conda>)."
-      ],
-      "metadata": {
-        "id": "4xtRB6l6BQ9x"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ywEsw-PC_okg"
+      },
       "source": [
         "# Using Mixed Precision\n",
         "\n",
@@ -118,25 +107,25 @@
         "    # {\"opt_level\": \"O3\", \"keep_batchnorm_fp32\": True, \"master_weights\": True, \"loss_scale\": \"dynamic\"}\n",
         "    AMP_ARGS: {\"opt_level\": \"O1\"}\n",
         "```"
-      ],
-      "metadata": {
-        "id": "ywEsw-PC_okg"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9W5emDVL_sDP"
+      },
       "source": [
         "# Using ZeRO\n",
         "\n",
         "**ZeRO: Memory Optimizations Toward Training Trillion Parameter Models** is a technique developed by **Samyam Rajbhandari, Jeff Rasley, Olatunji Ruwase, Yuxiong He** in [this paper](https://arxiv.org/abs/1910.02054).\n",
         "When training models with billions of parameters, GPU memory becomes a bottleneck. ZeRO can offer 4x to 8x memory reductions in memory thus allowing to fit larger models in memory.\n"
-      ],
-      "metadata": {
-        "id": "9W5emDVL_sDP"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KHf2PJxeB6Ho"
+      },
       "source": [
         "## How ZeRO works?\n",
         "\n",
@@ -149,17 +138,15 @@
         "4. parameters gradients\n",
         "\n",
         "ZeRO *shards* the optimizer state and the parameter gradients onto different devices and reduces the memory needed per device. See [here](https://fairscale.readthedocs.io/en/latest/deep_dive/oss_sdp_fsdp.html) for a deep dive by [FAIRscale](https://github.com/facebookresearch/fairscale).\n"
-      ],
-      "metadata": {
-        "id": "KHf2PJxeB6Ho"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "O4SzEZ4aB8IK"
+      },
       "source": [
         "## How to use ZeRO in VISSL?\n",
-        "\n",
-        "*TODO*: Priya/Quentin to check if this is still correct?\n",
         "\n",
         "VISSL uses [FAIRScale](https://github.com/facebookresearch/fairscale)_ library which implements ZeRO in PyTorch.\n",
         "Using VISSL in ZeRO involves only configuration changes and no code changes.\n",
@@ -182,23 +169,23 @@
         "    nesterov: False\n",
         "```\n",
         "\n",
-        "**NOTE**: ZeRO works seamlessly with LARC and mixed precision training. Using ZeRO with activation checkpointing is not yet enabled primarily due to manual gradient reduction need for activation checkpointing. *TODO* I don't think this is true anymore?\n"
-      ],
-      "metadata": {
-        "id": "O4SzEZ4aB8IK"
-      }
+        "**NOTE**: ZeRO works seamlessly with LARC and mixed precision training. Using ZeRO with activation checkpointing is not yet enabled primarily due to manual gradient reduction need for activation checkpointing.\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Using the Stateful Data Sampler"
-      ],
       "metadata": {
         "id": "6kXUmFEv_vJ7"
-      }
+      },
+      "source": [
+        "# Using the Stateful Data Sampler"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zJewF2T6CBDJ"
+      },
       "source": [
         "## Issue with PyTorch DataSampler for large data training\n",
         "\n",
@@ -215,13 +202,13 @@
         "\n",
         "- Sampler adds an instanace variable `start_iter` which tracks the model's iteration number of a given epoch. When the training is used, the `start_iter` will be properly set to the last iteration number and the sampler will serve only the remainder of the data.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "zJewF2T6CBDJ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "07OEhtl8CToA"
+      },
       "source": [
         "## How to use VISSL custom DataSampler\n",
         "\n",
@@ -238,25 +225,25 @@
         "```\n",
         "\n",
         "**NOTE**: Users can use `StatefulDistributedSampler` for the training dataset and use PyTorch default`DataSampler` for the test set. It is not mandatory to use the same sampler type for all data splits."
-      ],
-      "metadata": {
-        "id": "07OEhtl8CToA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OE6e3AEP_1Az"
+      },
       "source": [
         "# Activation Checkpointing\n",
         "\n",
         "Activation checkpointing is a very powerful technique to reduce the memory requirement of a model. This is especially useful when training very large models with billions of parameters.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "OE6e3AEP_1Az"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fCl20zHBCj_Z"
+      },
       "source": [
         "## How it works?\n",
         "\n",
@@ -269,13 +256,13 @@
         "- allows increasing training batch size for a given model\n",
         "\n",
         "We recommend users to read the documentation available [here](https://pytorch.org/docs/stable/checkpoint.html) for further details on activation checkpointing.\n"
-      ],
-      "metadata": {
-        "id": "fCl20zHBCj_Z"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1Bp0UZTGCle5"
+      },
       "source": [
         "## How to use activation checkpointing in VISSL?\n",
         "\n",
@@ -296,10 +283,21 @@
         "  # buckets.\n",
         "  MANUAL_GRADIENT_REDUCTION: True\n",
         "```"
-      ],
-      "metadata": {
-        "id": "1Bp0UZTGCle5"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Large Scale Training V0.1.6.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
