--- a/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb
+++ b/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb
@@ -1,46 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
-  "metadata": {
-    "colab": {
-      "name": "Using a pretrained model for inference V0.1.6.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Using_a_pretrained_model_for_inference_V0_1_6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "1ndZ6XwI7MYA"
+      },
+      "outputs": [],
       "source": [
         "# Copyright (c) Facebook, Inc. and its affiliates.\n",
         "\n",
         "# This source code is licensed under the MIT license found in the\n",
         "# LICENSE file in the root directory of this source tree."
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "1ndZ6XwI7MYA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6XzxTZfKwFNo"
+      },
       "source": [
         "# Loading a pre-trained model in inference mode\n",
         "\n",
@@ -60,25 +48,26 @@
         "**NOTE:** Please ensure your Collab Notebook has GPU available: `Edit -> Notebook Settings -> select GPU`.\n",
         "\n",
         "**NOTE:** You can make a copy of this tutorial by `File -> Open in playground mode` and make changes there. Please do NOT request access to this tutorial.\n"
-      ],
-      "metadata": {
-        "id": "6XzxTZfKwFNo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VohdWhBSw69e"
+      },
       "source": [
         "## Install VISSL\n",
         "\n",
-        "We will start this tutorial by installing VISSL, following the instructions [here](https://github.com/facebookresearch/vissl/blob/master/INSTALL.md#install-vissl-pip-package)."
-      ],
-      "metadata": {
-        "id": "VohdWhBSw69e"
-      }
+        "We will start this tutorial by installing VISSL, following the instructions [here](https://github.com/facebookresearch/vissl/blob/main/INSTALL.md#install-vissl-pip-package)."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "R5ISg59KTOqU"
+      },
+      "outputs": [],
       "source": [
         "# Install pytorch version 1.8\n",
         "!pip install torch==1.8.0+cu101 torchvision==0.9.0+cu101 -f https://download.pytorch.org/whl/torch_stable.html\n",
@@ -108,88 +97,86 @@
         "!pip install --progress-bar off -r requirements.txt\n",
         "!pip install opencv-python\n",
         "\n",
-        "# update classy vision install to current master\n",
+        "# update classy vision install to commit compatible with v0.1.6\n",
         "!pip uninstall -y classy_vision\n",
-        "\n",
-        "# TODO: fix classy commit here.\n",
-        "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/main\n",
+        "!pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/4785d5ee19d3bcedd5b28c1eb51ea1f59188b54d\n",
         "\n",
         "# install vissl dev mode (e stands for editable)\n",
         "!pip install -e .[dev]"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "R5ISg59KTOqU"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "VISSL should be successfuly installed by now and all the dependencies should be available."
-      ],
       "metadata": {
         "id": "u6Fxe3MWxqsI"
-      }
+      },
+      "source": [
+        "VISSL should be successfuly installed by now and all the dependencies should be available."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "Np6atgoOTPrA"
+      },
+      "outputs": [],
       "source": [
         "import vissl\n",
         "import tensorboard\n",
         "import apex\n",
         "import torch"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "Np6atgoOTPrA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Loading a VISSL SimCLR pre-trained model\n"
-      ],
       "metadata": {
         "id": "AFEHZ4KdxzWq"
-      }
+      },
+      "source": [
+        "## Loading a VISSL SimCLR pre-trained model\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "x-yyrVpHMehT"
+      },
       "source": [
         "\n",
         "\n",
         "## Download the ResNet-50 Simclr weights from the Model Zoo"
-      ],
-      "metadata": {
-        "id": "x-yyrVpHMehT"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "!wget -q -O /content/resnet_simclr.torch https://dl.fbaipublicfiles.com/vissl/model_zoo/simclr_rn101_1000ep_simclr_8node_resnet_16_07_20.35063cea/model_final_checkpoint_phase999.torch"
-      ],
-      "outputs": [],
       "metadata": {
         "id": "mc6wLsB-Ml6p"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "!wget -q -O /content/resnet_simclr.torch https://dl.fbaipublicfiles.com/vissl/model_zoo/simclr_rn101_1000ep_simclr_8node_resnet_16_07_20.35063cea/model_final_checkpoint_phase999.torch"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "n9v8oKuLNCNV"
+      },
       "source": [
         "## Create the model associated to the configuration\n",
         "\n",
         "Load the configuration and merge it with the default configuration."
-      ],
-      "metadata": {
-        "id": "n9v8oKuLNCNV"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "NCwpxr5lNBQy"
+      },
+      "outputs": [],
       "source": [
         "from omegaconf import OmegaConf\n",
         "from vissl.utils.hydra_config import AttrDict\n",
@@ -214,46 +201,58 @@
         "# Convert to AttrDict. This method will also infer certain config options\n",
         "# and validate the config is valid.\n",
         "_, cfg = convert_to_attrdict(cfg)"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "NCwpxr5lNBQy"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "And then build the model:"
-      ],
       "metadata": {
         "id": "A8MvkUNePfiP"
-      }
+      },
+      "source": [
+        "And then build the model:"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "IJPhQB5kPdIz"
+      },
+      "outputs": [],
       "source": [
         "from vissl.models import build_model\n",
         "\n",
         "model = build_model(cfg.MODEL, cfg.OPTIMIZER)"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "IJPhQB5kPdIz"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Loading the pre-trained weights"
-      ],
       "metadata": {
         "id": "ayNfZrhdPnOu"
-      }
+      },
+      "source": [
+        "## Loading the pre-trained weights"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k-xbwy1uPsT6",
+        "outputId": "7229d292-f8c4-403e-f98e-1a58a931cd16"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Weights have loaded\n"
+          ]
+        }
+      ],
       "source": [
         "from classy_vision.generic.util import load_checkpoint\n",
         "from vissl.utils.checkpoint import init_model_from_consolidated_weights\n",
@@ -272,47 +271,47 @@
         ")\n",
         "\n",
         "print(\"Weights have loaded\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Weights have loaded\n"
-          ]
-        }
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "irMB0q4ZP2nw"
+      },
+      "source": [
+        "## Extracting the Trunk Output on the VISSL Logo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rW0TIFz7QN2b"
+      },
+      "outputs": [],
+      "source": [
+        "!wget -q -O /content/test_image.jpg https://raw.githubusercontent.com/facebookresearch/vissl/master/.github/logo/Logo_Color_Light_BG.png"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "k-xbwy1uPsT6",
-        "outputId": "7229d292-f8c4-403e-f98e-1a58a931cd16"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Extracting the Trunk Output on the VISSL Logo."
+        "id": "hDpzK3TOP6Rw",
+        "outputId": "aa26dcfc-35ac-4818-9afe-355a8d7f9f52"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Features extracted have the shape: torch.Size([1, 2048, 1, 1])\n"
+          ]
+        }
       ],
-      "metadata": {
-        "id": "irMB0q4ZP2nw"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "source": [
-        "!wget -q -O /content/test_image.jpg https://raw.githubusercontent.com/facebookresearch/vissl/master/.github/logo/Logo_Color_Light_BG.png"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "rW0TIFz7QN2b"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "source": [
         "from PIL import Image\n",
         "import torchvision.transforms as transforms\n",
@@ -338,67 +337,55 @@
         "  print(f\"Features extracted have the shape: { features_shape }\")\n",
         "\n",
         "extract_features(\"/content/test_image.jpg\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Features extracted have the shape: torch.Size([1, 2048, 1, 1])\n"
-          ]
-        }
-      ],
-      "metadata": {
-        "id": "hDpzK3TOP6Rw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "aa26dcfc-35ac-4818-9afe-355a8d7f9f52"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The output is a list with as many representation layers as specified in the configuration. Specifically `cfg.config.MODEL.FEATURE_EVAL_SETTINGS.LINEAR_EVAL_FEAT_POOL_OPS_MAP` asks for one representation layer, namely the res5avg layer, so we only have one output."
-      ],
       "metadata": {
         "id": "m-8uspwrQ8a-"
-      }
+      },
+      "source": [
+        "The output is a list with as many representation layers as specified in the configuration. Specifically `cfg.config.MODEL.FEATURE_EVAL_SETTINGS.LINEAR_EVAL_FEAT_POOL_OPS_MAP` asks for one representation layer, namely the res5avg layer, so we only have one output."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Extract Features from Model Head"
-      ],
       "metadata": {
         "id": "nEg2WteJ64CQ"
-      }
+      },
+      "source": [
+        "# Extract Features from Model Head"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1DvYGxQJ6Hm8"
+      },
       "source": [
         "Now let us see how to extract the model's head features. Let's use the supervised RN-50 VISSL model from the [model zoo](https://github.com/facebookresearch/vissl/blob/main/MODEL_ZOO.md) as an example. These settings should extend to many use cases -- for example if you have fine-tuned a simclr model on imagenet and wish to extract the model output logits.\n",
         "\n",
-        "For running jobs to extract all the features from a vissl dataset, please see the [feature extraction tutorial](TODO THIS LINK)."
-      ],
-      "metadata": {
-        "id": "1DvYGxQJ6Hm8"
-      }
+        "For running jobs to extract all the features from a vissl dataset, please see the [feature extraction tutorial](https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Feature_Extraction_V0_1_6.ipynb)."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "!wget -q -O /content/resnet_in1k.torch https://dl.fbaipublicfiles.com/vissl/model_zoo/sup_rn50_in1k_ep105_supervised_8gpu_resnet_17_07_20.733dbdee/model_final_checkpoint_phase208.torch"
-      ],
-      "outputs": [],
       "metadata": {
         "id": "7xvs5lFd6GOu"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "!wget -q -O /content/resnet_in1k.torch https://dl.fbaipublicfiles.com/vissl/model_zoo/sup_rn50_in1k_ep105_supervised_8gpu_resnet_17_07_20.733dbdee/model_final_checkpoint_phase208.torch"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "Fg9eOnmp7FB9"
+      },
+      "outputs": [],
       "source": [
         "from omegaconf import OmegaConf\n",
         "from vissl.utils.hydra_config import AttrDict\n",
@@ -427,15 +414,27 @@
         "# Convert to AttrDict. This method will also infer certain config options\n",
         "# and validate the config is valid.\n",
         "_, cfg = convert_to_attrdict(cfg)"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "Fg9eOnmp7FB9"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m0Mu53gz7q23",
+        "outputId": "f023216c-a06d-40aa-efa6-1327303ffbe4"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Weights have loaded\n"
+          ]
+        }
+      ],
       "source": [
         "# Build the model\n",
         "from vissl.models import build_model\n",
@@ -456,55 +455,54 @@
         ")\n",
         "\n",
         "print(\"Weights have loaded\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Weights have loaded\n"
-          ]
-        }
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m0Mu53gz7q23",
-        "outputId": "f023216c-a06d-40aa-efa6-1327303ffbe4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "As you can see below, our model has an output of 1000 features for each of the 1000 imagenet classes."
-      ],
       "metadata": {
         "id": "NWklYMpn9JUA"
-      }
+      },
+      "source": [
+        "As you can see below, our model has an output of 1000 features for each of the 1000 imagenet classes."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "extract_features(\"/content/test_image.jpg\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Features extracted have the shape: torch.Size([1, 1000])\n"
-          ]
-        }
-      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_QXkKqh8Xhm",
         "outputId": "29877a4c-3add-4599-ef11-316cd759e237"
-      }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Features extracted have the shape: torch.Size([1, 1000])\n"
+          ]
+        }
+      ],
+      "source": [
+        "extract_features(\"/content/test_image.jpg\")"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Using a pretrained model for inference V0.1.6.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
