--- a/tutorials/Installation_V0_1_6.ipynb
+++ b/tutorials/Installation_V0_1_6.ipynb
@@ -1,54 +1,42 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
-  "metadata": {
-    "colab": {
-      "name": "Installation V0.1.6.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/facebookresearch/vissl/blob/v0.1.6/tutorials/Installation_V0_1_6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "source": [
-        "# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved"
-      ],
-      "outputs": [],
       "metadata": {
         "id": "Zl6yrjD75Fx7"
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6XzxTZfKwFNo"
+      },
       "source": [
         "# Installation\n",
         "\n",
         "VISSL installation is simple: we provide pre-built binaries (pip, conda) and also instructions for building from source (pip, conda).\n"
-      ],
-      "metadata": {
-        "id": "6XzxTZfKwFNo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "imQmMr-626YJ"
+      },
       "source": [
         "## Requirements\n",
         "\n",
@@ -63,25 +51,25 @@
         "\n",
         "Note our circle-ci runs tests on Pytorch versions 1.6.0 and 1.9.1 and these are our preferred versions. If you are using FSDP using the [fairscale](https://github.com/facebookresearch/fairscale) library, they run their unit tests on Pytorch versions  1.6.0, 1.7.1, and 1.8.1. \n",
         "\n"
-      ],
-      "metadata": {
-        "id": "imQmMr-626YJ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "SP8rIA5U3D-1"
+      },
       "source": [
         "## Installing VISSL from pre-built binaries\n",
         "\n",
         "VISSL provides conda and pip binaries pre-built.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "SP8rIA5U3D-1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "D7hyDr_F3MQw"
+      },
       "source": [
         "### Install VISSL conda package\n",
         "\n",
@@ -96,13 +84,13 @@
         "\n",
         "For other versions of PyTorch, Python, CUDA, please modify the above instructions with the\n",
         "desired version. VISSL provides Apex packages for all combinations of pytorch, python and compatible cuda.\n"
-      ],
-      "metadata": {
-        "id": "D7hyDr_F3MQw"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "PRMtGG1c3QrY"
+      },
       "source": [
         "\n",
         "### Install VISSL pip package\n",
@@ -113,14 +101,15 @@
         "- There are several ways to install opencv, one possibility is as follows.\n",
         "- For APEX, we provide pre-built binary built with optimized C++/CUDA extensions provided by APEX.\n",
         "Note that, for the APEX install, you need to get the versions of CUDA, PyTorch, and Python correct in the URL. We provide APEX versions for all possible combinations of Python, PyTorch, and CUDA. Select the right APEX Wheels if you want a different combination.\n"
-      ],
-      "metadata": {
-        "id": "PRMtGG1c3QrY"
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "N2q2fEUp3sqP"
+      },
+      "outputs": [],
       "source": [
         "# Install: PyTorch (we assume 1.5.1 but VISSL works with all PyTorch versions >=1.4)\n",
         "!pip install torch==1.5.1+cu101 torchvision==0.6.1+cu101 -f https://download.pytorch.org/whl/torch_stable.html\n",
@@ -143,24 +132,23 @@
         "\n",
         "# install VISSL\n",
         "!pip install vissl"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "N2q2fEUp3sqP"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JPhZPxPa3UhL"
+      },
       "source": [
         "## Installing VISSL from source\n",
         "The following instructions assume that you have a CUDA version installed and working.\n"
-      ],
-      "metadata": {
-        "id": "JPhZPxPa3UhL"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "naGJKTvM3Yon"
+      },
       "source": [
         "### Install from source in PIP environment\n",
         "\n",
@@ -190,21 +178,21 @@
         "# install vissl dependencies\n",
         "pip install --progress-bar off -r requirements.txt\n",
         "pip install opencv-python\n",
-        "# update classy vision install to current master\n",
+        "# update classy vision install to current main.\n",
         "pip uninstall -y classy_vision\n",
-        "pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/master\n",
+        "pip install classy-vision@https://github.com/facebookresearch/ClassyVision/tarball/main\n",
         "# install vissl dev mode (e stands for editable)\n",
         "pip install -e .[dev]\n",
         "# verify installation\n",
         "python -c 'import vissl, apex, cv2'\n",
         "```\n"
-      ],
-      "metadata": {
-        "id": "naGJKTvM3Yon"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "cdrzFg163bp5"
+      },
       "source": [
         "### Install from source in Conda environment\n",
         "\n",
@@ -233,33 +221,45 @@
         "Follow [step4 instructions from the PIP installation](#step-4-install-vissl-from-source)\n",
         "\n",
         "That's it! You are now ready to use VISSL.\n"
-      ],
-      "metadata": {
-        "id": "cdrzFg163bp5"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "VISSL should be successfuly installed by now and all the dependencies should be available."
-      ],
       "metadata": {
         "id": "u6Fxe3MWxqsI"
-      }
+      },
+      "source": [
+        "VISSL should be successfuly installed by now and all the dependencies should be available."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {
+        "id": "Np6atgoOTPrA"
+      },
+      "outputs": [],
       "source": [
         "import vissl\n",
         "import tensorboard\n",
         "import apex\n",
         "import torch"
-      ],
-      "outputs": [],
-      "metadata": {
-        "id": "Np6atgoOTPrA"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Installation V0.1.6.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
